<resources>
    <string name="app_name">IMC</string>
    <string name="name">Calcule seu IMC</string>
    <string name="txt_peso">Peso</string>
    <string name="txt_altura">Altura</string>
    <string name="txt_resultado">Resultado</string>
    <string name="txt_detalhe">Minha Colocação</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpar">Limpar</string>
</resources>
