<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.pacote.imc.MainActivity">

    <TextView
        android:text="@string/txt_peso"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/edtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        />

    <TextView
        android:text="@string/txt_altura"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/edtAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="1234567890."
        android:textSize="20sp"
        />

    <TextView
        android:text="@string/txt_resultado"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/edtResultado"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="1234567890."
        android:textColor="#000000"
        android:textSize="20sp"
        />

        <TextView
            android:text="@string/txt_detalhe"
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/edtDetalhe"
            android:enabled="false"
            android:layout_marginBottom="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/btnLimpar"
            android:text="@string/btn_limpar"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:background="#FFA07A"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/btnCalcular"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/btnCalcular"
            android:text="@string/btn_calcular"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:background="#FF6347"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>
